fix(mobile view for navbar) - repair the navbar burgr button on mobile displays

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,9 @@
 
 body {
     background-image: url('./assets/bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 100vh; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
   }
   
